# dhcp-structural-pipeline

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile-vtk9cuda  Dockerfile.icc  Dockerfile.intel  Makefile  altan-notes.md  configuration-extended.sh  debug.bash  debug.sh  dhcp-pipeline.sh  icpx.Dockerfile  ldconfig-intel.conf  setup.sh  vtk_ci_fedora39_cuda_20240412_rpmlist.txt
.mise/tasks/: test
applications/: surface-scalar-statistics.cc
parameters/: compilervars.sh  configuration.sh  debug.bash  recon-neonatal-cortex.cfg  recon-neonatal-cortex2.cfg
scripts/: getnproc.sh
scripts/misc/: pipeline.sh
scripts/segmentation/: pipeline.sh
scripts/surface/: create-myelin-map.sh  pipeline.sh
src-ext/: SphericalMeshConvertToString.h
src/applications/: CMakeLists.txt
src/applications/src/: surface-scalar-statistics.cc
src/build-src/: CMakePresets.json  CMakePresets.yml  CMakeUserPresets.json  CMakeUserPresets.yaml  compilervars.sh  fix-cmake-intel-openmp.sh
src/config/: compilervars.sh  ldconfig-intel.conf
src/dhcp-pipeline/: dhcp-pipeline.sh
src/dhcp-pipeline/parameters/: configuration.sh
src/dhcp-pipeline/scripts/surface/: create-myelin-map.sh  pipeline.sh
src/ext/: NiftiHeader.cxx
src/ext/workbench/src/: CMakeLists.txt
src/ext/workbench/src/CommandLine/: CMakeLists.txt
src/ext/workbench/src/Tests/: CMakeLists.txt
src/ext/workbench/src/kloewe/dot/: CMakeLists.txt
